k8s/DBdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
  namespace: chatapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapp
  template:
    metadata:
      labels:
        app: chatapp
    spec:
      containers:
        - name: mongo
          image: mongo:latest
          ports:
            - containerPort: 27017
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc
