k8s/FEdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-deployment
  namespace: chatapp

spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-chatapp
          image: shahabadnan/chatpp-frontend:latest
          ports:
            - containerPort: 80
