k8s/DBservice.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: chatapp
spec:
  selector:
    app: chatapp
  type: ClusterIP

  ports:
    - name: chatapp
      protocol: TCP
      port: 27017
      targetPort: 27017
